# quadrover

./: .hgignore  Files.md  Installation.md  ProjectHome.md  Rover_cpp_Observer_Angular_h.md  Rover_cpp_Observer_Translational_h.md  Rover_cpp_Rover_h.md  Rover_cpp_VelocityEstimator_h.md
Camera2IMU_calibration/: CMakeLists.txt  cmakeGenerate
Camera2IMU_calibration/cpp/: chad.vim  main.cpp
Leash/: CMakeLists.txt  dataCompare.m  dataviewPhone.m  dataviewVicon.m  gyroCalibration.m  log_ids.m  quad0.leashConfig
Leash/cpp/: Leash.cpp  Leash.h  Leash.ui  chad.vim
Leash/src/: FlightInterface.cpp  FlightInterface.h  FlightInterface.ui  Leash.cpp  Leash.h  Leash.ui  PhoneInterface.cpp  PhoneInterface.h  PhoneInterface.ui  QuadrotorInterface.cpp  QuadrotorInterface.h  QuadrotorInterface.ui  SystemControllerFeedbackLin.cpp  SystemControllerFeedbackLin.h  SystemControllerHierarchical.cpp  SystemControllerHierarchical.h  chad.vim  main.cpp
Leash/transControllers/: tranCntlSys1.xml  tranCntlSys2.xml  tranCntlSys3.xml  tranCntlSys4.xml  tranCntlSys6.xml  tranCntlSys7.xml  tranCntlSys8.xml  tranCntlSys9.xml
MotorTestApp/: AndroidManifest.xml  doLogcat
ObserverTuning/: CMakeLists.txt
ObserverTuning/cpp/: chad.vim  main.cpp
ObserverTuning/matlab/: compare.m  log_ids.m
Playground/: AndroidManifest.xml  CMakeLists.txt  cmakeGenerate  cmakeGenerateHyon  doInstall  doLogcat  getLog
Playground/cpp/: BRIEF.h  Common.h  Matcher.h  Playground.cpp  Playground.h  QuadLogger.cpp  QuadLogger.h  TNT_Utils.h  Time.h  VisionProcessor.cpp  VisionProcessor.h
Playground/jni/: jni_part.cpp
Playground/res/layout/: main.xml
Playground/res/values/: strings.xml
Playground/src/com/icsl/Playground/: Playground.java
Playground2/: CMakeLists.txt  dataviewPhone.m  doLogcat
Playground2/cpp/: AttitudeThrustController.cpp  CommManager.cpp  Matcher.cpp  MotorInterface.h  Observer_Angular.cpp  Observer_Translational.cpp  QuadLogger.h  Rover.cpp  SensorManager.cpp  SensorManager.h  SystemControllerFeedbackLin.cpp  Time.h  TranslationController.cpp  chad.vim
PointTrackingTest/: AndroidManifest.xml  CMakeLists.txt
PointTrackingTest/cpp/: Observer_Angular.h  Observer_Translational.h  android_main.cpp  chad.vim  main.cpp
Rover/: AndroidManifest.xml  CMakeLists.txt  cmakeGenerate  cmakeGenerateSample  doInstall  doLogcat  getCat  getImages  getLog  notes  temperatureCheck
Rover/Camera Calibrations/: s3Calib_640x480.yml  s4Calib_640x480.yml
Rover/cpp/: ActiveRegion.cpp  ActiveRegion.h  AttitudeThrustController.cpp  AttitudeThrustController.h  AttitudeThrustControllerListener.h  BlobDetector.cpp  BlobDetector.h  CommManager.cpp  CommManager.h  Common.h  Data.cpp  Data.h  DataLogger.cpp  DataLogger.h  FeatureFinder.cpp  FeatureFinder.h  Listeners.h  Matcher.cpp  Matcher.h  MotorInterface.cpp  MotorInterface.h  ObjectTracker.cpp  ObjectTracker.h  Observer_Angular.cpp  Observer_Angular.h  Observer_Translational.cpp  Observer_Translational.h  QuadLogger.cpp  QuadLogger.h  QuadPhone.cpp  QuadPhone.h  RegionFinder.cpp  RegionFinder.h  Rotation.cpp  Rotation.h  Rover.cpp  Rover.h  SensorManager.cpp  SensorManager.h  SystemControllerFeedbackLin.h  (+21 more)
Rover/cpp/ICSL/: constants.h
Rover/cpp/ICSL/SystemModel/: ISystemModel.h  ISystemModelAffine.h
Rover/cpp/ICSL/SystemModel/SystemModelLinear/src/: SystemModelLinear.cpp  SystemModelLinear.h
Rover/cpp/TNT/: jama_cholesky.h  jama_lu.h  jama_svd.h  tnt_array2d_utils.h
Rover/cpp/ferns/: buffer_management.cc  homography_estimator.cc  planar_pattern_detector.cc  template_matching_based_tracker.cc
Rover/jni/: jni_part.cpp
Rover/patterns/: Rect1.xcf
Rover/res/layout/: main.xml
Rover/res/values/: strings.xml
Rover/src/com/icsl/QuadPhone/: QuadPhone.java
Rover/src/com/icsl/Rover/: Rover.java  RoverService.java
TargetFindTest/: AndroidManifest.xml  CMakeLists.txt  cmakeGenerateAndroid  cmakeGenerateLinux  doLogcat
TargetFindTest/cpp/: ActiveObject.cpp  ActiveObject.h  android_main.cpp  chad.vim  funcs.cpp  funcs.h  main.cpp  mser.cpp  mser.h
TargetFindTest/res/layout/: main.xml
TargetFindTest/res/values/: strings.xml
TargetFindTest/src/com/icsl/: TargetFindTest.java
TelemetryVicon/: CMakeLists.txt
TelemetryVicon/src/: TelemetryVicon.cpp  TelemetryVicon.h  main.cpp
UsbConnectionManager/: AndroidManifest.xml  project.properties
VisionTestApp/: AndroidManifest.xml  CMakeLists.txt  doLogcat
VisionTestApp/cpp/: main.cpp  mapFuncs.cpp  mapFuncs.h  types.h
VisionTestApp/res/values/: strings.xml
VisionTestApp/src/com/icsl/VisionTestApp/: VisionTestApp.java
VisionTesting/: CMakeLists.txt
VisionTesting/cpp/: main.cpp  mapFuncs.cpp  mapFuncs.h  mser.cpp  mser.h
VisionTesting/matlab/: compare.m  makePlots.m
arduino/ADK_Test/: ADK_Test.ino
arduino/ADK_Test/AndroidApp/: AndroidManifest.xml  CMakeLists.txt  doLogcat  getCat
arduino/ADK_Test/AndroidApp/cpp/: jniInterface.cpp
arduino/ADK_Test/AndroidApp/res/layout/: main.xml
arduino/ADK_Test/AndroidApp/res/values/: strings.xml
arduino/ADK_Test/AndroidApp/src/icsl/adktest/: ADKTest.java  TestActivity.java
arduino/Adb/: Adb.cpp  Adb.h  max3421e.cpp  max3421e.h  usb.cpp  usb.h
arduino/Adb_Test/AndroidApp/: AndroidManifest.xml  CMakeLists.txt  cmakeGenerate  doLogcat  getCat
arduino/Adb_Test/AndroidApp/cpp/: MotorInterface.cpp  MotorInterface.h  MotorInterface.old.cpp  MotorInterface.old.h  Time.h  jniInterface.cpp
arduino/Adb_Test/AndroidApp/res/values/: strings.xml
arduino/Adb_Test/AndroidApp/res/xml/: accessory_filter.xml
arduino/Adb_Test/AndroidApp/src/icsl/adbtest/: AdbTest.java
arduino/onboard/MotorInterfaceS4/AndroidTestApp/: AndroidManifest.xml  CMakeLists.txt  build.xml  chad  cmakeGenerate  project.properties
arduino/onboard/MotorInterfaceS4/AndroidTestApp/cpp/: jniInterface.cpp
arduino/onboard/MotorInterfaceS4/AndroidTestApp/src/icsl/serialtest/: DeviceListActivity.java  SerialConsoleActivity.java  TestActivity.java
arduino/onboard/MotorInterfaceS4/testPC/: CMakeLists.txt  atmega8u2.py  chad.py
arduino/onboard/MotorInterfaceS4/testPC/src/: listdevs.cpp
(+23 files in other folders)
